# lararadio

./: .gitignore  CMakeLists.txt  LaraRadio.kdev4  README.es.md  README.md  README.pt-BR.md  about_dialog.cpp  about_dialog.h  about_dialog.ui  audioplayer.cpp  audioplayer.h  buttonhole.cpp  buttonhole.h  com.gutierre69.LaraRadio.yaml  configdialog.cpp  configdialog.h  configdialog.ui  custonIconProvider.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  timerclock.cpp  timerclock.h  version.h.in  vumeter.cpp  vumeter.h
data/: LaraRadio.desktop  com.gutierre69.LaraRadio.metainfo.xml
languages/: en_US.ts  pt_BR.ts
